Fixed icons on view one recipe page when scrollbar visible

--- a/public/styles.css
+++ b/public/styles.css
@@ -587,8 +587,7 @@ input{
     filter: invert(40%);
     margin-bottom: -.7em;
 } 
-
-/*View one Recipe Page*/
+/*View one-recipe Page*/
 .bookWrapper{
     align-items: center;
     display: flex;
@@ -611,6 +610,9 @@ input{
     flex: 1;
     padding: 1.5em 2.5em;
     position: relative;
+}
+.leftSideScrollbarVisible{
+    padding-bottom: 6em;
 }
 .author{
     font-size: .8em;
@@ -651,6 +653,13 @@ input{
 .recipeIngredients{
     padding: 0 0 1.5em;
 }
+.recipeIngrScrollbar{
+    height: 100%;
+    overflow-y: scroll;
+    padding-left: .5em;
+
+    height: 300px;
+}
 .recipeTips ul{
     list-style-type: circle;
 }
@@ -673,17 +682,22 @@ input{
     font-size: .9em;
     list-style-position: inside;
 }
-.details::-webkit-scrollbar{
+.details::-webkit-scrollbar,
+.recipeIngredients::-webkit-scrollbar{
     width: .8em;
 }
-.details::-webkit-scrollbar-track{
+.details::-webkit-scrollbar-track,
+.recipeIngredients::-webkit-scrollbar-track{
     box-shadow: inset 0 0 12px rgba(0,0,0,0.3);
     -webkit-box-shadow: inset 0 0 12px rgba(0,0,0,0.3);
 }
-.details::-webkit-scrollbar-thumb{
-    background-color: #b85151;
+.details::-webkit-scrollbar-thumb,
+.recipeIngredients::-webkit-scrollbar-thumb{
+    background-color: #ac5757;
 }
-.details::-webkit-scrollbar-thumb:hover{
+
+.details::-webkit-scrollbar-thumb:hover,
+.recipeIngredients::-webkit-scrollbar-thumb:hover{
     background-color: #9c4444;
 }
 .imageVisble{
@@ -723,9 +737,16 @@ input{
     display: flex;
     left: 50%;
     position: absolute;
+     /*border: solid 1px blue;
+    margin-top: 5em;
+    position: relative;*/
     transform: translate(-50%, -5%);
     width: 100%;
-} 
+}
+/*.icons{
+    position: fixed;
+    width: inherit;
+}*/
 .iconWrapperSingleRec div{
     align-items: flex-end;
     display: flex;
